# mutable

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  API.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  Doxyfile  Doxyfile-api  HowToRunExperiments.md  LICENSE  Pipfile  README.md  TODO.md  build_command.sh  check  configure_command.sh  coverage.sh  debug_nested_loops.sh  docker-compose.yml  eval-information-value.sh  eval-planners.sh  eval-states-generated.sh  eval-thinned_clique.sh  execute_mutable.sh  execute_test_query.sh  execute_working_query.sh  generate_small_queries.py  hanwen-eval-planners-dpccp.sh  hanwen-eval-planners.sh  make_data_smaller.py  other_bug_fixes.sh  planner-benchmark-dpccp-goo.csv  planner-benchmark.csv  planner-configs.sh  querygen.py  release-hanwen-eval-planners.sh  remove_path_duplicates.sh  run.sh  (+6 more)
benchmark/: .gitignore  Benchmark.py  CMakeLists.txt  Continuous-Benchmarking.md  PostgreSQL_DB_Gen.sql  Schema_DBDiagram.txt  _schema.yml  benchmark_utils.py  get_data.py  hyperconf.py  style.css
code/: CMakeLists.txt
doc/: build-clang-from-source.md  contribution-guideline.md  preliminaries.md  setup-building-with-V8.md  setup-depot_tools.md  setup-gn.md  setup.md  syntax-grammar.md  syntax-tokens.md
doxy/: extra.css  footer.html  header.html
hooks/: pre-commit  pre-receive
job/: schema_mutable.sql  setup_postgres.sh  text_length.sql
patches/: autospider_macos_sdk.patch
src/: CMakeLists.txt  Options.cpp  allocator_benchmark.cpp  astdot.cpp  cardinality_gen.cpp  check.cpp  cnf.cpp  demo.cpp  dsv.cpp  globals.cpp  globals.hpp  ir.cpp  lex.cpp  mutable.cpp  operator.cpp  optimizer.cpp  order.cpp  parse.cpp  query_slicer.cpp  shell.cpp  sorting.cpp  store.cpp  train-operator-model.cpp  version.cpp  wasm.cpp
src/IR/: CMakeLists.txt  CNF.cpp  CNF.hpp  Condition.cpp  CostModel.hpp  HeuristicSearchPlanEnumerator.cpp  Interpreter.cpp  Interpreter.hpp  JoinGraph.cpp  JoinGraph.hpp  JoinOrderer.cpp  JoinOrderer.hpp  Operator.cpp  Operator.hpp  OperatorDot.cpp  OperatorDot.hpp  OperatorVisitor.cpp  OperatorVisitor.hpp  Optimizer.cpp  Optimizer.hpp  PDDL.cpp  PDDL.hpp  PartialPlanGenerator.cpp  PartialPlanGenerator.hpp  PhysicalOptimizer.cpp  PhysicalPlanTable.hpp  PlanEnumerator.cpp  PlanEnumerator.hpp  PlanTable.cpp  QueryGraph.cpp  QueryGraph.hpp  QueryGraph2SQL.cpp  QueryGraph2SQL.hpp  Tuple.cpp  Tuple.hpp
src/backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  InterpreterOperator.cpp  InterpreterOperator.hpp  PhysicalOperator.cpp  PhysicalOperator.hpp  RuntimeStruct.cpp  RuntimeStruct.hpp  SpiderMonkeyEngine.cpp  SpiderMonkeyEngine.hpp  SpiderMonkeyPlatform.cpp  SpiderMonkeyPlatform.hpp  StackMachine.cpp  StackMachine.hpp  V8Backend.cpp  V8Backend.hpp  V8Engine.cpp  V8Engine.hpp  V8Platform.cpp  V8Platform.hpp  Vector.hpp  WasmAlgo.cpp  WasmAlgo.hpp  WasmDSL.cpp  WasmDSL.hpp  WasmMacro.hpp  WasmOperator.cpp  WasmOperator.hpp  WasmUtil.cpp  WasmUtil.hpp  WebAssembly.cpp  WebAssembly.hpp  design-backend_wasm.md
src/catalog/: CMakeLists.txt  CardinalityEstimator.cpp  Catalog.cpp  CostFunction.hpp  CostFunctionCout.cpp  CostModel.cpp  DatabaseCommand.cpp  README.md  Scheduler.cpp  Schema.cpp  Schema.hpp  SerialScheduler.cpp  SerialScheduler.hpp  SimpleCostFunction.cpp  SpnWrapper.cpp  SpnWrapper.hpp  TableFactory.cpp  TrainedCostFunction.cpp  Type.cpp  Type.hpp  YannakakisHeuristic.cpp
src/io/: CMakeLists.txt  DSVReader.cpp  Reader.hpp
src/lex/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenType.hpp
src/parse/: AST.cpp  AST.hpp  ASTDot.cpp  ASTDot.hpp  ASTDumper.cpp  ASTDumper.hpp  ASTPrinter.cpp  ASTPrinter.hpp  ASTVisitor.cpp  ASTVisitor.hpp  CMakeLists.txt  Parser.cpp  Parser.hpp  Sema.cpp  Sema.hpp
src/storage/: CMakeLists.txt  ColumnStore.cpp  ColumnStore.hpp  DataLayout.cpp  DataLayoutFactory.cpp  Index.cpp  Linearization.cpp  Linearization.hpp  PaxStore.cpp  PaxStore.hpp  RowStore.cpp  RowStore.hpp  Store.cpp  Store.hpp  store_manip.cpp  store_manip.hpp
src/tables/: Backend.tbl  FollowSet.tbl  Functions.tbl  Keywords.tbl  Opcodes.tbl  Operators.tbl  PlanEnumerator.tbl  TokenType.tbl
src/util/: ADT.cpp  ADT.hpp  AdjacencyMatrix.cpp  ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  Diagnostic.cpp  Diagnostic.hpp  DotTool.cpp  DotTool.hpp  GridSearch.hpp  Kmeans.cpp  Kmeans.hpp  LinearModel.cpp  LinearModel.hpp  Pool.hpp  Position.cpp  Position.hpp  RDC.cpp  RDC.hpp  README.md  Spn.cpp  Spn.hpp  StringPool.cpp  StringPool.hpp  StringView.hpp  Timer.cpp  Timer.hpp  WebSocketServer.cpp  WebSocketServer.hpp  algorithms.hpp  assert.hpp  datagen.hpp  eigen_meta.hpp  fn.cpp  fn.hpp  glyphs.hpp  hash.hpp  macro.hpp  memory.cpp  (+4 more)
src/util/container/: RefCountingHashMap.hpp
unittest/: CMakeLists.txt  GlobalsTest.cpp  OptionsTest.cpp  catch.hpp  sanity.cpp  testutil.hpp
unittest/IR/: AdjacencyMatrixTest.cpp  CNFTest.cpp  HeuristicSearchPlanEnumeratorTest.cpp  InterpreterTest.cpp  OptimizerTest.cpp  PartialPlanGeneratorTest.cpp  PlanEnumeratorTest.cpp  QueryGraphTest.cpp  TupleTest.cpp
unittest/backend/: InterpreterTest.cpp  StackMachineTest.cpp  VectorTest.cpp  WasmDSLTest.tpp  WasmOperatorTest.tpp  WasmTest.hpp  WasmTestInterpreter.cpp  WasmTestV8.cpp  WasmUtilTest.tpp
unittest/catalog/: CardinalityEstimatorTest.cpp  DatabaseCommandTest.cpp  SchemaTest.cpp  TableFactoryTest.cpp  TypeTest.cpp  YannakakisHeuristicTest.cpp
unittest/io/: DSVReaderTest.cpp
unittest/lex/: LexerTest.cpp  TokenTest.cpp
unittest/parse/: ParserTest.cpp  SemaTest.cpp
unittest/storage/: ColumnStoreTest.cpp  IndexTest.cpp  PaxStoreTest.cpp  RowStoreTest.cpp  StoreTest.cpp  store_manipTest.cpp
unittest/util/: ADTTest.cpp  AdjacencyMatrixTest.cpp  AlgorithmsTest.cpp  AllocatorTest.cpp  ArgParserTest.cpp  FnTest.cpp  GridSearchTest.cpp  KmeansTest.cpp  LinearModelTest.cpp  MemoryTest.cpp  PoolTest.cpp  PositionTest.cpp  SpnTest.cpp  StringPoolTest.cpp  TimerTest.cpp  allocatorTest.cpp  reader_writer_lock_test.cpp  unsharable_shared_ptr_test.cpp
unittest/util/container/: RefCountingHashMapTest.cpp
(+1441 files in other folders)
